# axon-lang

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md
compiler/src/lexer/: lexer.c  lexer.h
docs/: SPEC.md
examples/: hello_graph.axon
runtime/src/: lib.rs
